--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -23,7 +23,7 @@
     <div id="loading-placeholder" style="min-height: 1200px;">
     </div>
 
-    <product-form raw-image-group-data="{{imageGroupData}}" raw-variants-data="{{variantsData}}" default-variant-id="{{variant_selected.id}}" loading-gif-url="{{ 'loader.gif' | asset_url }}">
+    <product-form raw-image-group-data="{{imageGroupData}}" raw-variants-data="{{variantsData}}" default-variant-id="{{variant_selected.id}}" loading-gif-url="{{ 'loader.gif' | asset_url }}" atc-text-color="{{section.settings.atc_text_color}}" atc-bg-color="{{section.settings.atc_bg_color}}">
       <template #brief>
         <h1>{{product.title}}</h1>
       </template>
@@ -108,6 +108,22 @@
         "type": "text",
         "id": "price_note_mobile",
         "label": "Price Note (Mobile)"
+      },
+      {
+        "type": "header",
+        "content": "Form"
+      },
+      {
+        "type": "color",
+        "id": "atc_text_color",
+        "label": "Add to cart Text Color",
+        "default": "#fff"
+      },
+      {
+        "type": "color",
+        "id": "atc_bg_color",
+        "label": "Add to cart Background Color",
+        "default": "#008ffd"
       },
       {
         "type": "header",
