--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -246,9 +246,8 @@
       h3 {
         text-align: center;
         color: #0090fc;
-        margin-bottom: 18px;
+        margin-bottom: 6px;
         font-family: 'neuzeitgroteskblack';
-        margin-bottom: 15px;
       }
 
       .text {
@@ -256,15 +255,16 @@
 
         p {
           display: inline-block;
-          border: 2px solid #bcbec0;
-          border-radius: 5px;
           background-color: white;
+          border-left: 1px solid #ccc;
           color: #000;
-          padding: 6px;
-          font-family: 'neuzeitgroteskblack';
-          font-weight: bold;
-          padding: 6px 6px 6px;
+          padding: 0 6px;
+          font-family: 'neuzeit_grotesk_regular';
           font-size: 12px;
+        }
+
+        p:first-child {
+          border: none;
         }
       }
 
