Chore: fix weird spacing

--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -48,9 +48,7 @@
         <h3>{{section.settings.promo_title}}</h3>
 
         <div class="text">
-          <p>{{section.settings.promo_one}}</p>
-          <p>{{section.settings.promo_two}}</p>
-          <p>{{section.settings.promo_three}}</p>
+          <p>{{section.settings.promo_one}}</p><p>{{section.settings.promo_two}}</p><p>{{section.settings.promo_three}}</p>
         </div>
 
           <div class="code">
@@ -146,19 +144,19 @@
         "type": "richtext",
         "id": "promo_one",
         "label": "Promo 1",
-        "default": "3 FOR $25"
+        "default": "<p>3 FOR $25</p>"
       },
       {
         "type": "richtext",
         "id": "promo_two",
         "label": "Promo 2",
-        "default": "6 FOR $35"
+        "default": "<p>6 FOR $35</p>"
       },
       {
         "type": "richtext",
         "id": "promo_three",
         "label": "Promo 3",
-        "default": "8 FOR $45"
+        "default": "<p>8 FOR $45</p>"
       },
       {
         "type": "text",
