Chore: fix spacing

--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -48,7 +48,7 @@
         <h3>{{section.settings.promo_title}}</h3>
 
         <div class="text">
-          <p>{{section.settings.promo_one}}</p><p>{{section.settings.promo_two}}</p><p>{{section.settings.promo_three}}</p>
+          {{section.settings.promo_one}}{{section.settings.promo_two}}{{section.settings.promo_three}}
         </div>
 
           <div class="code">
