--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -258,7 +258,7 @@
           border-left: 1px solid #8a8a8a;
           color: #000;
           padding: 0 8px;
-          font-family: 'neuzeit_grotesk_regular';
+          font-family: 'neuzeitgroteskblack';
           font-size: 12px;
         }
 
