Chore: sync app changes

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="{{ settings.color_accent }}">
   <meta name="robots" content="index,follow">
   <meta name="google-site-verification" content="1GuKV9Ynhy01MON2gGSP-rmAXmClHgt956WgfNd9BEY" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
   <!-- Begin Anti-flicker snippet (recommended) -->
   <style>.async-hide { opacity: 0 !important} </style>
