--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -3,6 +3,89 @@
 
 @import "../sections/stamped-review.scss";
 
+section.hero {
+  position: relative;
+
+  .mobile {
+    @media screen and (min-width: $tablet) {
+      display: none;
+    }
+  }
+
+  .desktop {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    display: none;
+
+    @media screen and (min-width: $tablet) {
+      display: flex;
+    }
+
+    .content {
+      margin-top: 0px;
+    }
+  }
+
+  .container {
+    padding: 10px;
+    margin: 0;
+
+    @media screen and (min-width: 980px) {
+      margin: 0 auto;
+    }
+  }
+
+  .content {
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  h1 {
+    font-size: 40px;
+    font-family: "neuzeitgroteskblack";
+    line-height: 1;
+  }
+
+  p.title-caption {
+    font-size: 20px;
+    font-family: "neuzeit_grotesk_light";
+    font-weight: bold;
+    margin: 10px 0;
+  }
+
+  .primary-cta, .secondary-cta {
+    font-family: "neuzeit_grotesk_light" ;
+    font-size: 16px;
+
+    &.primary-cta {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+
+    &.secondary-cta {
+      margin-top: 10px;
+      margin-bottom: 0px;
+    }
+
+    @media screen and (min-width: $tablet) {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+  }
+
+  a {
+    color: white;
+    background-color: #008ffd;
+    border: 1px solid #008ffd;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1.2px;
+    width: 240px;
+  }
+}
 
 .section.text-banner {
   h2 {
