Chore: fix syntax error

--- a/src/sections/hero-banner.liquid
+++ b/src/sections/hero-banner.liquid
@@ -168,8 +168,8 @@
       {
         "type": "color",
         "id": "secondary_cta_text_color",
-        "label": "Secondary CTA Text Color"
-        "default": "#FFFFFF",
+        "label": "Secondary CTA Text Color",
+        "default": "#FFFFFF"
       },
       {
         "type": "color",
