--- a/src/sections/product-feature.liquid
+++ b/src/sections/product-feature.liquid
@@ -3,7 +3,6 @@
       <ul class="columns">
       {% for block in section.blocks %}
         <li class="column">
-          <span style="color: {{ section.settings.text_color  }};">{{ forloop.index }}</span>
           <img data-src="{{ block.settings.icon | img_url: '40x' }}" class="lazyload" alt="{{ block.settings.icon.alt }}" data-src="{{ block.settings.icon | img_url }}"/>
           <p class="text-mobile" style="color: {{ section.settings.text_color  }};">{{ block.settings.text_mobile }}</p>
           <p class="text-desktop" style="color: {{ section.settings.text_color  }};">{{ block.settings.text }}</p>
@@ -42,7 +41,7 @@
         {
           "type": "image_picker",
           "id": "icon",
-          "label": "Mobile Image"
+          "label": "Icon"
         }
       ]
     }
