--- a/src/sections/hero-banner.liquid
+++ b/src/sections/hero-banner.liquid
@@ -1,183 +1,144 @@
-{% if section.settings.type == 'video' and section.settings.video_url != blank %}
-  <section class="hero">
-    <video autoplay="" loop="loop" muted playsinline {% if section.settings.video_poster %}poster="{{ section.settings.video_poster | img_url: 'master' }}" {% endif %}>
-      <source src="{{section.settings.video_url}}" type="video/mp4">
-    </video>
-  </section>
-{% endif %}
-
-{% if section.settings.type == 'image' and section.settings.image %}
-  <section class="hero">
-    <img class="img-desktop" src="{{ section.settings.image | img_url: 'master' }}">
-    <img class="img-mobile" src="{{ section.settings.image_mobile | img_url: 'master' }}">
-
-    <div class="desktop">
-      <div class="container">
-        <div class="content" style="text-align: {{section.settings.overlay_position}}">
-          <h1>{{ section.settings.title }}</h1>
-          <p class="title-caption">{{ section.settings.title_caption }}</p>
-
-          {% if section.settings.primary_cta_text != blank %}
-            <p class="primary-cta">
-              <a class="button" href="{{ section.settings.primary_cta_link }}" style="{%- if section.settings.primary_cta_bg_color -%}background-color: {{section.settings.primary_cta_bg_color}};border-color: {{section.settings.primary_cta_bg_color}};{%- endif -%}{%- if section.settings.primary_cta_text_color -%}color: {{section.settings.primary_cta_text_color}};{%- endif -%}">
-                {{ section.settings.primary_cta_text}}
-              </a>
-            </p>
-          {% endif %}
-
-          {% if section.settings.enable_secondary_cta %}
-            <p class="secondary-cta">
-              <a class="button" href="{{ section.settings.secondary_cta_link }}" style="{%- if section.settings.secondary_cta_bg_color -%}background-color: {{section.settings.secondary_cta_bg_color}};border-color: {{section.settings.secondary_cta_bg_color}};{%- endif -%}{%- if section.settings.secondary_cta_text_color -%}color: {{section.settings.secondary_cta_text_color}};{%- endif -%}">
-                {{ section.settings.secondary_cta_text}}
-              </a>
-            </p>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-
-    <div class="mobile">
-      <div class="container">
-        <div class="content">
-          <h1>{{ section.settings.title }}</h1>
-          <p class="title-caption">{{ section.settings.title_caption }}</p>
-
-          {% if section.settings.primary_cta_text != blank %}
-            <p class="primary-cta">
-              <a class="button" href="{{ section.settings.primary_cta_link }}" style="{%- if section.settings.primary_cta_bg_color -%}background-color: {{section.settings.primary_cta_bg_color}};border-color: {{section.settings.primary_cta_bg_color}};{%- endif -%}{%- if section.settings.primary_cta_text_color -%}color: {{section.settings.primary_cta_text_color}};{%- endif -%}">
-                {{ section.settings.primary_cta_text}}
-              </a>
-            </p>
-          {% endif %}
-
-          {% if section.settings.enable_secondary_cta %}
-            <p class="secondary-cta">
-              <a class="button" href="{{ section.settings.secondary_cta_link }}" style="{%- if section.settings.secondary_cta_bg_color -%}background-color: {{section.settings.secondary_cta_bg_color}};border-color: {{section.settings.secondary_cta_bg_color}};{%- endif -%}{%- if section.settings.secondary_cta_text_color -%}color: {{section.settings.secondary_cta_text_color}};{%- endif -%}">
-                {{ section.settings.secondary_cta_text}}
-              </a>
-            </p>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-  </section>
-{% endif %}
+<hero-banner>
+  <template #settings>
+    <script type="application/json">
+      {
+        "blocks": [
+          {% for block in section.blocks %}
+            {{block.settings | json}}
+            {%- unless forloop.last -%},{%- endunless -%}
+          {% endfor %}
+        ]
+      }
+    </script>
+  </template>
+</hero-banner>
 
 {% schema %}
   {
     "name": "Hero Banner",
-    "settings": [
+    "blocks": [
       {
-        "type": "radio",
-        "id": "type",
-        "label": "Enable",
-        "options": [
-          { "value": "image", "label": "Image" },
-          { "value": "video", "label": "Video" }
-        ],
-        "default":   "image"
-      },
-      {
-       "type": "header",
-       "content": "Image"
-      },
-      {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Image"
-      },
-      {
-        "type": "image_picker",
-        "id": "image_mobile",
-        "label": "Mobile Image"
-      },
-      {
-       "type": "header",
-       "content": "Video"
-      },
-      {
-        "type": "text",
-        "id": "video_url",
-        "label": "Video URL"
-      },
-      {
-        "type": "image_picker",
-        "id": "video_poster",
-        "label": "Video Poster"
-      },
-      {
-       "type": "header",
-       "content": "Image Overlay"
-      },
-      {
-        "type": "select",
-        "id": "overlay_position",
-        "label": "Position",
-        "options": [
-          { "value": "left", "label": "Left" },
-          { "value": "center", "label": "Center" },
-          { "value": "right", "label": "Right" }
-        ],
-        "default": "left"
-      },
-      {
-        "type": "text",
-        "id": "title",
-        "label": "Title"
-      },
-      {
-        "type": "text",
-        "id": "title_caption",
-        "label": "Title Caption"
-      },
-      {
-        "type": "text",
-        "id": "primary_cta_text",
-        "label": "Primary CTA Text"
-      },
-      {
-        "type": "url",
-        "id": "primary_cta_link",
-        "label": "Primary CTA Link"
-      },
-      {
-        "type": "color",
-        "id": "primary_cta_text_color",
-        "label": "Primary CTA Text Color",
-        "default": "#FFFFFF"
-      },
-      {
-        "type": "color",
-        "id": "primary_cta_bg_color",
-        "label": "Primary CTA Background Color",
-        "default": "#008FFD"
-      },
-      {
-        "type": "checkbox",
-        "id": "enable_secondary_cta",
-        "label": "Enable Secondary CTA"
-      },
-      {
-        "type": "text",
-        "id": "secondary_cta_text",
-        "label": "Secondary CTA Text"
-      },
-      {
-        "type": "url",
-        "id": "secondary_cta_link",
-        "label": "Secondary CTA Link"
-      },
-      {
-        "type": "color",
-        "id": "secondary_cta_text_color",
-        "label": "Secondary CTA Text Color",
-        "default": "#FFFFFF"
-      },
-      {
-        "type": "color",
-        "id": "secondary_cta_bg_color",
-        "label": "Secondary CTA Background Color",
-        "default": "#A6B4BE"
+        "type": "slide",
+        "name": "Slide",
+        "settings": [
+          {
+            "type": "radio",
+            "id": "type",
+            "label": "Enable",
+            "options": [
+              { "value": "image", "label": "Image" },
+              { "value": "video", "label": "Video" }
+            ],
+            "default":   "image"
+          },
+          {
+           "type": "header",
+           "content": "Image"
+          },
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Image"
+          },
+          {
+            "type": "image_picker",
+            "id": "image_mobile",
+            "label": "Mobile Image"
+          },
+          {
+           "type": "header",
+           "content": "Video"
+          },
+          {
+            "type": "text",
+            "id": "video_url",
+            "label": "Video URL"
+          },
+          {
+            "type": "image_picker",
+            "id": "video_poster",
+            "label": "Video Poster"
+          },
+          {
+            "type": "url",
+            "id": "mobile_link",
+            "label": "Mobile Image Link"
+          },
+          {
+           "type": "header",
+           "content": "Desktop Image Overlay"
+          },
+          {
+            "type": "select",
+            "id": "overlay_position",
+            "label": "Position",
+            "options": [
+              { "value": "left", "label": "Left" },
+              { "value": "center", "label": "Center" },
+              { "value": "right", "label": "Right" }
+            ],
+            "default": "left"
+          },
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Title"
+          },
+          {
+            "type": "text",
+            "id": "title_caption",
+            "label": "Title Caption"
+          },
+          {
+            "type": "text",
+            "id": "primary_cta_text",
+            "label": "Primary CTA Text"
+          },
+          {
+            "type": "url",
+            "id": "primary_cta_link",
+            "label": "Primary CTA Link"
+          },
+          {
+            "type": "color",
+            "id": "primary_cta_text_color",
+            "label": "Primary CTA Text Color",
+            "default": "#FFFFFF"
+          },
+          {
+            "type": "color",
+            "id": "primary_cta_bg_color",
+            "label": "Primary CTA Background Color",
+            "default": "#008FFD"
+          },
+          {
+            "type": "checkbox",
+            "id": "enable_secondary_cta",
+            "label": "Enable Secondary CTA"
+          },
+          {
+            "type": "text",
+            "id": "secondary_cta_text",
+            "label": "Secondary CTA Text"
+          },
+          {
+            "type": "url",
+            "id": "secondary_cta_link",
+            "label": "Secondary CTA Link"
+          },
+          {
+            "type": "color",
+            "id": "secondary_cta_text_color",
+            "label": "Secondary CTA Text Color",
+            "default": "#FFFFFF"
+          },
+          {
+            "type": "color",
+            "id": "secondary_cta_bg_color",
+            "label": "Secondary CTA Background Color",
+            "default": "#A6B4BE"
+          }
+        ]
       }
     ],
     "presets": [
