--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -4,8 +4,6 @@
 @import "../sections/stamped-review.scss";
 
 section.hero {
-  position: relative;
-
   .img-desktop {
     display: none;
 
@@ -14,14 +12,28 @@ section.hero {
     }
   }
 
-  .mobile, .img-mobile {
+  .img-mobile {
+    display: block;
+
     @media screen and (min-width: $tablet) {
       display: none;
     }
   }
 
+  .item {
+    position: relative;
+
+    a.img-link {
+      border: none;
+      background: none;
+      display: block;
+      width: 100%;
+    }
+  }
+
   .desktop {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -33,6 +45,7 @@ section.hero {
     }
 
     .content {
+      text-align: center;
       margin-top: 0px;
     }
   }
@@ -40,15 +53,11 @@ section.hero {
   .container {
     padding: 10px;
     margin: 0;
+    width: 100%;
 
     @media screen and (min-width: 980px) {
       margin: 0 auto;
     }
-  }
-
-  .content {
-    text-align: center;
-    margin-top: 30px;
   }
 
   h1 {
@@ -92,6 +101,7 @@ section.hero {
     font-weight: bold;
     letter-spacing: 1.2px;
     width: 240px;
+    padding: 0px;
   }
 }
 
