--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -421,6 +421,19 @@ body {
   }
 }
 
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0,-100%,0);
+    transform: translate3d(0,-100%,0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+  }
+}
+
 .navbar .cart-detail {
   display: flex;
   justify-content: flex-end;
@@ -429,6 +442,27 @@ body {
 
   @media screen and (min-width: $tablet) {
     top: 60px;
+  }
+
+  .progress-bar {
+    padding: 10px 20px 15px 20px;
+    border-bottom: 1px solid #ccc;
+
+    p {
+      line-height: 1;
+      margin-bottom: 10px;
+    }
+
+    .progress::-webkit-progress-value {
+      transition: width 0.5s ease;
+    }
+
+    .fade-enter-active {
+      animation: fade-in-up .5s;
+    }
+    .fade-leave-active {
+      display: none;
+    }
   }
 
   .continue-shopping {
