Feature: progress bar color

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -110,6 +110,8 @@
                   free-shipping-hint-template="{{settings.cart_free_shipping_hint_text}}"
                   free-shipping-item-count="{{settings.cart_free_shipping_item_count}}"
                   free-shipping-applied-text="{{settings.cart_free_shipping_applied_text}}"
+                  discount-hint-color="{{settings.cart_discount_hint_color}}"
+                  progress-bar-color="{{settings.cart_progress_bar_color}}"
                   no-discount-hint-text="{{settings.cart_no_discount_hint_text}}"
                   discount-applied-template="{{settings.cart_discount_applied_text}}"
                   checkout-text-color="{{settings.cart_checkout_text_color}}"
