--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -475,11 +475,17 @@ body {
       font-size: 14px;
     }
 
-    progress {
-      height: 0.5rem
+    .progress-frame {
+      width: 100%;
+      height: 8px;
+      background-color: #d8d8d8;
+      border-radius: 4px;
+      overflow: hidden;
     }
 
-    .progress::-webkit-progress-value {
+    .progress-fill {
+      background-color: #4a4a4a;
+      height: 100%;
       transition: width 0.5s ease;
     }
 
