--- a/src/sections/product-primary.liquid
+++ b/src/sections/product-primary.liquid
@@ -38,7 +38,7 @@
         "type": "color",
         "id": "highlight_text_color",
         "label": "Highlight Text Color",
-        "default": "#008ffd"
+        "default": "#000000"
       }
     ]
   }
