--- a/src/styles/templates/product.primary.scss
+++ b/src/styles/templates/product.primary.scss
@@ -1,14 +1,137 @@
 @import "~bulma/sass/utilities/initial-variables.sass";
 @import "../variables.scss";
-
-@import "../sections/cart-control";
 @import "../sections/stamped-review.scss";
 @import "../sections/faq.scss";
+
+.cart-control {
+  background-color: white;
+  padding: 20px 20px 0px 20px;
+  border-bottom: 2px solid #c3c3c3;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 20px;
+    background-color: unset;
+    border: none;
+    padding: 0;
+  }
+
+  .icon-plus, .icon-minus, input[name="quantity"] {
+    max-width: 33px;
+    border: 1px solid #000;
+    border-radius: 0px;
+    color: #000;
+    line-height: 32px;
+    font-size: 18px;
+    background: #f2f2f2;
+    font-weight: 300;
+    cursor: pointer;
+    height: 32px;
+    width: 25%;
+    text-align: center;
+    background-color: white;
+
+    &:before {
+      font-weight: bold;
+    }
+
+    @media screen and (min-width: $tablet) {
+      background-color: inherit;
+    }
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  input[type=number] {
+    max-width: 43px;
+    font-weight: bold;
+    margin: 0 6px;
+  }
+
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+  }
+
+  button {
+    width: 100%;
+    margin-left: 10px;
+    background-color: #0090fc;
+    border: 1px solid #0090fc;
+    border-radius: 12px;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: "neuzeitgroteskblack";
+    font-weight: bold;
+    padding: 9px 20px;
+    height: 48px;
+
+    &:hover, &:focus {
+      color: white
+    }
+
+    &:disabled {
+      background-color: #0090fc;
+    }
+
+    .checkmark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+
+      path {
+        stroke-dasharray: 19.79 19.79;
+        stroke-dashoffset: 19.79;
+        opacity: 0;
+      }
+    }
+
+    span {
+      animation-duration: 0.8s;
+      animation-name: fadeInDown;
+      font-size: 22px;
+
+      @media screen and (min-width: $tablet) {
+        font-size: 18px;
+      }
+    }
+
+    &.loading {
+      span {
+        animation-duration: 0.8s;
+        animation-name: zoomOut;
+      }
+
+      .checkmark path {
+        animation: drawCheckmark 0.5s linear alternate forwards;
+      }
+    }
+  }
+}
+
+@keyframes drawCheckmark {
+  from {
+    stroke-dashoffset: 19.79;
+    opacity: 1;
+  }
+  to {
+    stroke-dashoffset: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {0%{opacity:0;transform:translate3d(0,-20px,0)}to{opacity:1;transform:none}}.fadeInDown{animation-name:fadeInDown}
+@keyframes zoomOut {0%{opacity:1}50%{opacity:0;transform:scale3d(.3,.3,.3)}to{opacity:0}}.zoomOut{animation-name:zoomOut}
 
 .product {
   background-color: #f1f2f2;
   padding: 0;
-  border-bottom: 1px solid #f1f2f2;
 
   @media screen and (min-width: $tablet) {
     padding: 1.5rem 1.5rem;
@@ -19,13 +142,11 @@
 
     @media screen and (min-width: $tablet) {
       display: inline-block;
-      margin-left: 15px;
-      margin-bottom: 15px;
     }
   }
 
   .mobile {
-    display: block;
+    display: unset;
 
     @media screen and (min-width: $tablet) {
       display: none;
@@ -57,7 +178,12 @@
     padding: 0;
 
     @media screen and (min-width: $tablet) {
-      max-width: 560px;
+      max-width: 580px;
+      padding: 0.75rem;
+    }
+
+    @media screen and (min-width: $desktop) {
+      max-width: none;
       padding: 0.75rem;
     }
   }
@@ -143,18 +269,44 @@
     .brief {
       h1 {
         font-family: 'neuzeitgroteskblack';
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.3px;
-        width: auto;
-        padding-top: 10px;
-        margin-bottom: 10px;
+        font-size: 30px;
         color: black;
+        margin-top: 24px;
+        line-height: 1;
+        padding-left: 10px;
 
         @media screen and (min-width: $tablet) {
-          width: 200px;
-          padding-top: 0;
+          padding-left: 0;
+          margin-top: 0px;
+          font-size: 40px;
+          line-height: 1;
         }
+      }
+
+      .subheading {
+        padding-left: 10px;
+        font-family: 'Univers-Cn';
+        font-size: 15px;
+        line-height: 1;
+        letter-spacing: 1.5px;
+        margin-bottom: 20px;
+
+        @media screen and (min-width: $tablet) {
+          padding-left: 0;
+          font-size: 20px;
+        }
+      }
+
+      .social-impact {
+        font-size: 15px;
+        font-family: 'UniversLTStd';
+        font-weight: bold;
+        line-height: 32px;
+        text-align: center;
+        padding-top: 3px;
+        border-top: 2px solid #c3c3c3;
+        border-bottom: 2px solid #c3c3c3;
+        margin-bottom: 6px;
       }
 
       .price-note {
@@ -170,25 +322,112 @@
       }
     }
 
+    .options {
+      padding-bottom: 6px;
+      border-bottom: 2px solid #c3c3c3;
+
+      @media screen and (min-width: $tablet) {
+        border: none;
+      }
+
+      .column.size {
+        text-align: center;
+
+        @media screen and (min-width: $tablet) {
+          text-align: left;
+        }
+      }
+
+      .wrap {
+        padding-left: 10px;
+
+        @media screen and (min-width: $tablet) {
+          padding-left: 0px;
+        }
+      }
+
+      .option-text {
+        text-transform: uppercase;
+        font-family: 'Univers-BoldCn';
+        font-size: 15px;
+        letter-spacing: 1.5px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      .desktop.size-note {
+        font-family: 'Univers-BoldCn';
+        font-size: 15px;
+        opacity: 0.5;
+        letter-spacing: 1.5px;
+      }
+
+      .column:first-child {
+        border-right: 2px solid #c3c3c3;
+
+        @media screen and (min-width: $tablet) {
+          border: none;
+        }
+      }
+
+      .selected-swatch-text.mobile {
+        float: right;
+        margin-right: 10px;
+      }
+
+      .selected-swatch-text.desktop {
+        margin-top: 20px;
+      }
+
+      .selected-size-text.desktop {
+        margin-top: 26px;
+      }
+
+      .size-option {
+        display: inline-block;
+
+        input {
+          display: none;
+        }
+
+        label {
+          padding-top: 2px;
+          display: inline-block;
+          font-family: 'neuzeitgroteskblack';
+          border: 1px solid black;
+          width: 52px;
+          height: 32px;
+          line-height: 32px;
+          font-size: 25px;
+          text-align: center;
+          margin-right: 6px;
+        }
+      }
+    }
+
     .stamped-main-badge {
-      margin-bottom: 25px;
-      margin-left: 0;
+      margin-bottom: 6px;
+      padding-left: 8px;
+
+      @media screen and (min-width: $tablet) {
+        padding-left: 0px;
+        margin-bottom: 16px;
+      }
     }
 
     .stamped-product-reviews-badge .stamped-badge-caption {
-      font-weight: bold;
-      font-family: HelveticaNeue;
+      font-family: 'UniversLTStd';
       margin-left: 15px;
 
       @media screen and (min-width: $tablet) {
-        display: inline-block !important;;
+        display: inline-block !important;
       }
     }
 
     .price {
-      font-family: HelveticaNeue;
-      font-size: 20px;
-      letter-spacing: 0.1px;
+      font-family: 'Univers-BoldCn';
+      font-size: 15px;
+      letter-spacing: 1.5px;
       font-weight: bold;
 
       @media screen and (min-width: $tablet) {
@@ -202,28 +441,19 @@
       }
     }
 
-    .selected-swatch-text {
-      font-weight: bold;
-      text-transform: uppercase;
-      font-family: 'neuzeitgroteskblack';
-      font-size: 12px;
-      letter-spacing: 0.1px;
-      margin-bottom: 10px;
+    .promo {
+      padding-top: 10px;
+      margin: 0;
+      background-color: white;
 
       @media screen and (min-width: $tablet) {
-        margin-bottom: 38px;
-        margin-left: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
       }
-    }
-
-    .promo {
-      padding: 16px 0px 25px;
-      margin: 0;
 
       &.mobile {
         display: block;
         margin-bottom: 10px;
-        background-color: #f1f2f2;
 
         @media screen and (min-width: $tablet) {
           display: none;
@@ -232,7 +462,6 @@
 
       &.desktop {
         display: none;
-        background-color: white;
 
         @media screen and (min-width: $tablet) {
           display: block;
@@ -245,8 +474,8 @@
 
       h3 {
         text-align: center;
-        color: #0090fc;
         margin-bottom: 6px;
+        font-size: 22px;
         font-family: 'neuzeitgroteskblack';
       }
 
@@ -258,8 +487,9 @@
           border-left: 1px solid #8a8a8a;
           color: #000;
           padding: 0 8px;
-          font-family: 'neuzeitgroteskblack';
-          font-size: 12px;
+          font-family: 'Univers-Cn';
+          font-size: 15px;
+          letter-spacing: 1.5px;
         }
 
         p:first-child {
@@ -299,9 +529,9 @@
     }
 
     .column.thumbnail {
-      width: 60px;
-      min-width: 60px;
-      max-width: 60px;
+      width: 80px;
+      min-width: 80px;
+      max-width: 80px;
       display: none;
 
       a {
@@ -316,7 +546,7 @@
     .column.banner {
       text-align: center;
       width: 100%;
-      height: 412px;
+      height: auto;
       padding-bottom: 0px;
       padding-left: 0px;
       padding-right: 0px;
@@ -326,14 +556,13 @@
       }
 
       @media screen and (min-width: $tablet) {
-        width: 300px;
         min-height: 300px;
         padding: .75rem;
         height: auto;
       }
 
       .swiper-container {
-        height: 400px;
+        height: auto;
 
         @media screen and (min-width: $large-phone) {
           height: 460px;
@@ -355,78 +584,68 @@
         }
       }
 
+      .swiper-slide {
+        min-height: 300px;
+      }
+
       .swiper-slide img {
         display: block;
         margin: 0 auto;
-        height: inherit;
+        height: auto;
+
+        @media screen and (min-width: $large-phone) {
+          height: 472px;
+        }
 
         @media screen and (min-width: $tablet) {
-          height: auto;
           width: 100%;
+          height: auto;
         }
       }
     }
   }
 
   .product-swatch {
-    margin-bottom: 15px;
-
     .swatch {
-      border: #e2e2e2 1px solid;
-      margin: 0px 4px 4px 0;
-      width: 42px;
-      height: 42px;
+      border: white 3px solid;
+      margin: 0px 24px 4px 0;
+      width: 34px;
+      height: 34px;
       border-radius: 50%;
       display: inline-block;
-      padding: 3px;
+      padding: 0px;
       box-sizing: border-box;
 
       @media screen and (min-width: $tablet) {
-        width: 28px;
-        height: 28px;
-        padding: 2px;
+        border-color: #f1f2f2;
       }
 
       &.selected {
-        border-width: 1px;
-        border-color: #000;
-        box-shadow: 0px 0px 0px 2px #fff;
-        padding: 3px;
-
-        @media screen and (min-width: $tablet) {
-          padding: 1px;
-          border-width: 2px;
-        }
+        border-width: 3px;
+        border-color: #0090fc;
       }
 
       a {
         display: inline-block;
-        min-height: 34px;
-        min-width: 34px;
-        width: 34px;
-        height: 34px;
-        border: #e2e2e2 2px solid;
+        min-height: 28px;
+        min-width: 28px;
+        width: 28px;
+        height: 28px;
+        border: black 1px solid;
         border-radius: 50%;
         background-position: center;
         background-size: cover;
-
-
-        @media screen and (min-width: $tablet) {
-          min-height: 22px;
-          min-width: 22px;
-          width: 22px;
-          height: 22px;
-        }
       }
     }
   }
 }
 
-.product-feature {
-  padding: 26px 0;
+.product-highlights {
+  padding: 0;
 
   @media screen and (min-width: $tablet) {
-    border-bottom: 1px solid #bdbdbd;
+    padding: 20px 0;
+    border-bottom: 2px solid #bdbdbd;
   }
 
   .container {
@@ -440,39 +659,39 @@
     margin: 0;
 
     li {
-      display: flex;
-      flex-wrap: wrap;
       text-align: center;
-      align-items: center;
 
       @media screen and (min-width: $tablet) {
         text-align: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
       .img-wrap {
-        margin: 0 auto;
+        width: 100%;
+        height: 60px;
 
         @media screen and (min-width: $tablet) {
-          margin: 0;
-        }
+          width: auto;
+        }  
       }
 
       img {
         display: block;
         margin-bottom: 10px;
         max-width: 60px;
+        margin: 0 auto;
 
         @media screen and (min-width: $tablet) {
-          margin: 0 20px;
+          margin-right: 20px;
         }
       }
 
       p {
         display: inline-block;
-        font-size: 16px;
-        line-height: normal;
-        font-family: neuzeit_grotesk_regular;
-        font-weight: normal;
+        font-size: 12px;
+        font-family: UniversLTStd;
 
         &.text-mobile {
           display: block;
@@ -484,8 +703,7 @@
 
         @media screen and (min-width: $tablet) {
           display: inline-block;
-          font-size: 20px;
-          font-family: "neuzeitgroteskblack";
+          font-size: 18px;
           line-height: 1.2;
 
           &.text-mobile {
@@ -1086,7 +1304,7 @@
                   display: block;
               }
               .created {
-                  font-family: "Univers-Cn";
+                  font-family: "UniversLTStd";
                   font-size: 12px;
                   font-weight: normal;
                   font-style: normal;
