Feature: size select

--- a/src/styles/templates/product.primary.scss
+++ b/src/styles/templates/product.primary.scss
@@ -401,6 +401,11 @@
           font-size: 25px;
           text-align: center;
           margin-right: 6px;
+
+          &.selected {
+            border-color: #0090fc;
+            color: #0090fc;
+          }
         }
       }
     }
