--- a/src/styles/templates/product.primary.scss
+++ b/src/styles/templates/product.primary.scss
@@ -740,14 +740,17 @@
 
     li {
       text-align: center;
-      padding: 0;
       cursor: pointer;
-      background-color: #f8f8f8;
+      background-color: #e7e7e7;
       border: none;
-      color: #bdbdbd;
-      padding: 10px 0;
-      font-family: "neuzeit_grotesk_regular";
-      font-size: 17px;
+      padding: 10px 6px;
+      font-family: "Univers-Cn";
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 1.25;
+      letter-spacing: 1.2px;
 
       &:not(:last-child) {
         border-right: 1px solid #d7d7d7;
@@ -966,6 +969,11 @@
       padding: 30px 0;
       margin: 0 20px;
       border-bottom: 1px solid #c3c3c3;
+      text-align: center;
+
+      @media screen and (min-width: $tablet) {
+        border: none;
+      }
     }
 
     h3 {
@@ -974,6 +982,46 @@
       margin: 0;
       text-align: center;
       line-height: 1;
+    }
+
+    .size-chart {
+      padding: 20px 20px;
+
+      h3 {
+        text-align: left;
+        margin-bottom: 20px;
+      }
+
+      .table {
+        width: 100%;
+      }
+
+      .table td {
+        border: 1px solid #c3c3c3;
+        text-align: center;
+        font-family: 'Univers-BoldCn';
+        letter-spacing: 2.2px;
+
+        &.gender {
+          vertical-align: middle;
+          color: white;
+          background-color: #0090fc;
+          border-color: #0090fc;
+          font-size: 20px;
+          font-family: 'neuzeitgroteskblack';
+          letter-spacing: normal;
+          width: 100px;
+        }
+
+        &.size-name {
+          color: white;
+          background-color: #0090fc;
+          border-color: #0090fc;
+          font-family: 'Univers-Cn';
+          font-size: 12px;
+          letter-spacing: 1px;
+        }
+      }
     }
 
     .divider {
@@ -995,10 +1043,55 @@
     img {
       margin: 0 auto;
       display: block;
+      max-height: 80px;
 
       @media screen and (min-width: $tablet) {
         max-width: none;
       }
+    }
+  }
+
+  .ptab-social-impact {
+    h3 {
+      font-family: 'neuzeitgroteskblack';
+      font-size: 40px;
+      margin: 0;
+      padding: 0 30px;
+      text-align: center;
+      line-height: 1;
+
+      @media screen and (min-width: $tablet) {
+        font-size: 80px;
+      }
+    }
+
+    .divider {
+      margin: 30px auto;
+      width: 200px;
+      border-bottom: 1px solid #c3c3c3;
+    }
+
+    .detail {
+      padding: 30px 0;
+      margin: 0 20px;
+      text-align: center;
+      
+      p {
+        font-size: 20px;
+        line-height: 1.3;
+
+        @media screen and (min-width: $tablet) {
+          font-size: 30px;
+        }
+      }
+    }
+
+    .img-wrap {
+      padding-top: 40px;
+    }
+
+    img {
+      max-height: 80px;
     }
   }
 
